rendered/envs/zoo/octopi/namespace-octopi.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    a8r.io/repository: git@github.com:kbudde/lab.git
  name: octopi
  namespace: octopi
