rendered/envs/zoo/octopi/service-octopi.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: git@github.com:kbudde/lab.git
  name: octopi
  namespace: octopi
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: octopi
